# TTTT2

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/yute/tttt/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/include/openssl/: opensslconf.h
app/src/main/java/com/yute/tttt/: MainActivity.java
app/src/main/jni/: CMakeLists.txt  native-lib.cpp
app/src/test/java/com/yute/tttt/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
mylibrary/: build.gradle
mylibrary/src/androidTest/java/com/yute/mylibrary/: ExampleInstrumentedTest.java
mylibrary/src/main/: AndroidManifest.xml
mylibrary/src/test/java/com/yute/mylibrary/: ExampleUnitTest.java
